# analysis_finance_reports

./: .env  .env.template  .gitattributes  .gitconfig  .gitignore  .readthedocs.yaml  AUTHORS  AUTHORS.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Jenkinsfile  README.md  SECURITY.md  babel.cfg  freeports.pot  pyproject.toml  setup.cfg
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-errata-corrige.md
contrib/: init.sh  requirements.devtools.txt  requirements.i18n.txt  requirements.minimal.txt  requirements.txt
devtools/: make_tests.py  notebook.template.ipynb  page_layout.py
docs/: .gitignore  prova.txt
docs/source/: API.rst  conf.py  contribute.rst  index.rst
docs/source/_generated/: freeports_analysis.cmd.rst  freeports_analysis.conf_parse.rst  freeports_analysis.consts.rst  freeports_analysis.formats.AMUNDI2.rst  freeports_analysis.formats.ANIMA.rst  freeports_analysis.formats.ASTERIA.rst  freeports_analysis.formats.EURIZON.rst  freeports_analysis.formats.EURIZON_IT.rst  freeports_analysis.formats.EURIZON_OLD.rst  freeports_analysis.formats.FIDEURAM.rst  freeports_analysis.formats.MEDIOLANUM.rst  freeports_analysis.formats.asteria_2023.rst  freeports_analysis.formats.rst  freeports_analysis.formats.utils_commons.rst  freeports_analysis.formats.utils_deserialize.rst  freeports_analysis.formats.utils_pdf_filter.pdf_parts.font.rst  freeports_analysis.formats.utils_pdf_filter.pdf_parts.generic.rst  freeports_analysis.formats.utils_pdf_filter.pdf_parts.position.rst  freeports_analysis.formats.utils_pdf_filter.pdf_parts.rst  freeports_analysis.formats.utils_pdf_filter.position.rst  freeports_analysis.formats.utils_pdf_filter.rst  freeports_analysis.formats.utils_pdf_filter.select_font.rst  freeports_analysis.formats.utils_pdf_filter.select_position.rst  freeports_analysis.formats.utils_pdf_filter.xml.rst  freeports_analysis.formats.utils_tabularize.rst  freeports_analysis.formats.utils_text_extract.rst  freeports_analysis.formats_utils.pdf_filter.select_font.rst  freeports_analysis.formats_utils.pdf_filter.xml.rst  freeports_analysis.main.rst
docs/source/dev/: code.rst  tests.rst
docs/source/usage/: command.rst  installation.rst
src/analysis_finance_reports/: consts.py  download.py  main.py
src/freeports_analysis/: __init__.py  cmd.py  conf_parse.py  consts.py  download.py  extract_data.py  filter_pdf.py  filter_text.py  i18n.py  main.py  pdf_parts.py  relevant_pdf_parts.py  search.py  text_parts.py
src/freeports_analysis/data/: format_url_mapping.yaml  target.csv
src/freeports_analysis/formats/: __init__.py  utils_commons.py  utils_deserialize.py  utils_pdf_filter.py  utils_tabularize.py  utils_text_extract.py
src/freeports_analysis/formats_utils/: __init__.py  deserialize.py
tests/: .gitignore  conftest.py  test_deserialize.py  test_download.py  test_pdf_filter.py  test_pipeline.py  test_tabularize.py  test_text_extract.py
tests/data/AMUNDI/: financial_data-43.pkl  out.csv  pdf_blks-43.pkl  rows-43.pkl  txt_blks-43.pkl
tests/data/AMUNDI2/: financial_data-558.pkl  pdf_blks-558.pkl  txt_blks-558.pkl
tests/data/ANIMA/: financial_data-544.pkl  out.csv  pdf_blks-544.pkl  rows-544.pkl  txt_blks-544.pkl
tests/data/ARCA/: financial_data-20.pkl  out.csv  (+2 more)
tests/formats/: __init__.py  test_amundi.py  test_amundi2.py  test_anima.py  test_arca.py  test_asteria.py  test_asteria_2023.py  test_eurizon.py  test_eurizon_it.py  test_eurizon_old.py  test_fideuram.py  test_mediolanum.py
validation/: document-oreste.yaml
(+296 files in other folders)
