[metadata]
name = freeports_analysis
version = 0.0.1
description="Script for dumping a csv from different finance reports about ethical aspects"
author="Oreste Sciacqualegni"
author_email="orestesciacqualegni@tutanota.com"
url="https://github.com/GVoreste/analysis_finance_reports"
maintainer="Oreste Sciacqualegni"
maintainer_email="orestesciacqualegni@tutanota.com"

[options]
include_package_data = True
install_requires =
    importlib_resources
    rapidfuzz
    dotenv
    pyyaml
    pandas
    requests
    PyMuPDF
    lxml
    

[options.entry_points]
console_scripts =
    freeports = freeports_analysis.cmd:cmd


[options.package_data]
freeports_analysis =
    data/*